// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:DatePicker Should render DatePicker with every optional props present 1`] = `
<label
  className="input-field-label"
>
  <div>
    Choose a date below*
  </div>
  <div
    className="customDatePickerWidth"
  >
    <r
      allowSameDay={false}
      customTimeInput={null}
      dateFormat="yyyy/MM/dd"
      dateFormatCalendar="LLLL yyyy"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      enableTabLoop={true}
      excludeScrollbar={true}
      filterDate={[Function]}
      focusSelectedMonth={false}
      monthsShown={1}
      nextMonthAriaLabel="Next Month"
      nextMonthButtonLabel="Next Month"
      nextYearAriaLabel="Next Year"
      nextYearButtonLabel="Next Year"
      onBlur={[Function]}
      onCalendarClose={[Function]}
      onCalendarOpen={[Function]}
      onChange={[MockFunction]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onInputClick={[Function]}
      onInputError={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      preventOpenOnFocus={false}
      previousMonthAriaLabel="Previous Month"
      previousMonthButtonLabel="Previous Month"
      previousYearAriaLabel="Previous Year"
      previousYearButtonLabel="Previous Year"
      readOnly={false}
      renderDayContents={[Function]}
      selected={null}
      selectsDisabledDaysInRange={false}
      shouldCloseOnSelect={true}
      showFourColumnMonthYearPicker={false}
      showFullMonthYearPicker={false}
      showMonthYearPicker={false}
      showPopperArrow={true}
      showPreviousMonths={false}
      showQuarterYearPicker={false}
      showTimeInput={false}
      showTimeSelect={false}
      showTwoColumnMonthYearPicker={false}
      showYearPicker={false}
      strictParsing={false}
      timeCaption="Time"
      timeInputLabel="Time"
      timeIntervals={30}
      withPortal={false}
      yearItemNumber={12}
    />
  </div>
</label>
`;

exports[`component:DatePicker Should render DatePicker with every optional props absent 1`] = `
<label
  className="input-field-label"
>
  <div>
    Choose a date below
  </div>
  <div
    className="customDatePickerWidth"
  >
    <r
      allowSameDay={false}
      customTimeInput={null}
      dateFormat="dd/MM/yyyy"
      dateFormatCalendar="LLLL yyyy"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      enableTabLoop={true}
      excludeScrollbar={true}
      filterDate={[Function]}
      focusSelectedMonth={false}
      monthsShown={1}
      nextMonthAriaLabel="Next Month"
      nextMonthButtonLabel="Next Month"
      nextYearAriaLabel="Next Year"
      nextYearButtonLabel="Next Year"
      onBlur={[Function]}
      onCalendarClose={[Function]}
      onCalendarOpen={[Function]}
      onChange={[MockFunction]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onInputClick={[Function]}
      onInputError={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      preventOpenOnFocus={false}
      previousMonthAriaLabel="Previous Month"
      previousMonthButtonLabel="Previous Month"
      previousYearAriaLabel="Previous Year"
      previousYearButtonLabel="Previous Year"
      readOnly={false}
      renderDayContents={[Function]}
      selected={null}
      selectsDisabledDaysInRange={false}
      shouldCloseOnSelect={true}
      showFourColumnMonthYearPicker={false}
      showFullMonthYearPicker={false}
      showMonthYearPicker={false}
      showPopperArrow={true}
      showPreviousMonths={false}
      showQuarterYearPicker={false}
      showTimeInput={false}
      showTimeSelect={false}
      showTwoColumnMonthYearPicker={false}
      showYearPicker={false}
      strictParsing={false}
      timeCaption="Time"
      timeInputLabel="Time"
      timeIntervals={30}
      withPortal={false}
      yearItemNumber={12}
    />
  </div>
</label>
`;
